# Darknet

./: CMakeLists.txt  README.md
3rd Party/pthreads-win32/: CMakeLists.txt
include/: darknet.h
src/: activation_layer.cpp  avgpool_layer.cpp  batchnorm_layer.cpp  blas.cpp  blas_kernels.cu  compare.cpp  connected_layer.cpp  convolutional_kernels.cu  convolutional_layer.cpp  cost_layer.cpp  crnn_layer.cpp  crop_layer.cpp  crop_layer_kernels.cu  cuda.cpp  cuda.h  data.cpp  deconvolutional_layer.cpp  demo.cpp  detection_layer.cpp  dropout_layer.cpp  gemm.cpp  gru_layer.cpp  im2col_kernels.cu  image.cpp  image.h  image_opencv.cpp  iseg_layer.cpp  l2norm_layer.cpp  list.cpp  local_layer.cpp  logistic_layer.cpp  lstm_layer.cpp  matrix.cpp  maxpool_layer.cpp  maxpool_layer_kernels.cu  network.cpp  normalization_layer.cpp  option_list.cpp  parser.cpp  region_layer.cpp  (+7 more)
yoloTest/: main.cpp
